chỉnh sưa csdl tự tăng một số khóa

--- a/QLGV_DTSoft/appsettings.json
+++ b/QLGV_DTSoft/appsettings.json
@@ -1,4 +1,4 @@
-//Scaffold-DbContext "Server=LAMQUOCTHAI\SQLEXPRESS;Database=NIENLUANCOSO;Integrated Security=True;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Data -f
+//Scaffold-DbContext "Server=LAMQUOCTHAI\SQLEXPRESS;Database=DTSoft;Integrated Security=True;Trusted_Connection=SSPI;Encrypt=false;TrustServerCertificate=true;" Microsoft.EntityFrameworkCore.SqlServer -OutputDir Data -f
 {
   "Logging": {
     "LogLevel": {
