--- a/QLGV_DTSoft/QLGV_DTSoft.csproj
+++ b/QLGV_DTSoft/QLGV_DTSoft.csproj
@@ -100,6 +100,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.14" />
+    <PackageReference Include="sautinsoft.document" Version="2023.4.19" />
   </ItemGroup>
 
 </Project>
